.provarCaches/00D5h000009Q6XQEA0/objects/QCLiveChecks__Issue__c.object
<CustomObject>
    <description>Salesforce Issue fetched from the Quality Clouds API</description>
    <fields>
        <fullName>QCLiveChecks__AIReConversationId__c</fullName>
        <label>AIRe Conversation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__AIReFixDescription__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__AIReFixGeneratedBy__c</fullName>
        <label>Generated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__AIReFixRatingCount__c</fullName>
        <label>AIReFixRatingCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__AIReFixRating__c</fullName>
        <label>Rating</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__AIReFix__c</fullName>
        <label>QC Copilot Fix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QCLiveChecks__AIReRecommendation__c</fullName>
        <inlineHelpText>Quality Clouds recommended code fix</inlineHelpText>
        <label>Recommendation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__AcademyCourse__c</fullName>
        <label>Academy course</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Baseline__c</fullName>
        <label>Baseline</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__CEUpdatedById__c</fullName>
        <label>CEUpdatedById</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ChatGPTFix__c</fullName>
        <label>ChatGPT Fix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QCLiveChecks__CreatedBy__c</fullName>
        <description>User Id who created the affected element</description>
        <inlineHelpText>User Id who created the affected element</inlineHelpText>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__CreatedOn__c</fullName>
        <description>Date on which the affected element was created</description>
        <inlineHelpText>Date on which the affected element was created</inlineHelpText>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Documentation__c</fullName>
        <description>Documentation URL</description>
        <inlineHelpText>Documentation URL</inlineHelpText>
        <label>Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ElementName__c</fullName>
        <formula>RIGHT(QCLiveChecks__Scan__r.QCLiveChecks__ScanName__c, LEN(QCLiveChecks__Scan__r.QCLiveChecks__ScanName__c) - FIND(&apos;#&apos;, QCLiveChecks__Scan__r.QCLiveChecks__ScanName__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ElementType__c</fullName>
        <formula>LEFT(QCLiveChecks__Scan__r.QCLiveChecks__ScanName__c, FIND(&apos;#&apos;, QCLiveChecks__Scan__r.QCLiveChecks__ScanName__c) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Element Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ID__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID</inlineHelpText>
        <label>Issue ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ImpactArea__c</fullName>
        <description>Impact Area</description>
        <label>Impact Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCALABILITY</fullName>
                </value>
                <value>
                    <fullName>PERFORMANCE</fullName>
                </value>
                <value>
                    <fullName>MANAGEABILITY</fullName>
                </value>
                <value>
                    <fullName>SECURITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Issue__c</fullName>
        <description>Issue Type</description>
        <label>Issue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__LineNumber__c</fullName>
        <description>Line number where the issue was detected</description>
        <inlineHelpText>Line number where the issue was detected</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Link__c</fullName>
        <description>Link from Quality Clouds API</description>
        <inlineHelpText>Link from Quality Clouds API</inlineHelpText>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__QualityGateScanStatus__c</fullName>
        <formula>QCLiveChecks__Scan__r.QCLiveChecks__QualityGate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Gate Scan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__QualityGateTag__c</fullName>
        <label>Quality Gate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Scan__c</fullName>
        <description>Scan the issue is part of</description>
        <inlineHelpText>Scan the issue is part of</inlineHelpText>
        <label>Scan</label>
        <referenceTo>QCLiveChecks__Scan__c</referenceTo>
        <relationshipLabel>QCIssues</relationshipLabel>
        <relationshipName>QCIssues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Severity__c</fullName>
        <description>Severity</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QCLiveChecks__TagsMultiPicklist__c</fullName>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QCLiveChecks__TimeToFix__c</fullName>
        <label>Estimated Fix Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__UpdatedBy__c</fullName>
        <description>User Id who last updated the affected element</description>
        <inlineHelpText>User Id who last updated the affected element</inlineHelpText>
        <label>Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__UpdatedOn__c</fullName>
        <description>Date on which the affected element was last updated</description>
        <inlineHelpText>Date on which the affected element was last updated</inlineHelpText>
        <label>Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__WriteOffID__c</fullName>
        <label>Write Off ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__WriteOffPeerReviewId__c</fullName>
        <label>Peer Review Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Expiration_Date__c</fullName>
        <label>Write Off Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Request_Description__c</fullName>
        <description>Write Off Request Description</description>
        <inlineHelpText>Write Off Request Description</inlineHelpText>
        <label>Write Off Request Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Request_Reason__c</fullName>
        <label>Write Off Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reason1</fullName>
                    <label>Complex solution, requires refactoring</label>
                </value>
                <value>
                    <fullName>Reason2</fullName>
                    <label>Insufficient time to fix and test</label>
                </value>
                <value>
                    <fullName>Reason3</fullName>
                    <label>Complex to test and validate all situations</label>
                </value>
                <value>
                    <fullName>Reason4</fullName>
                    <label>False positive rule</label>
                </value>
                <value>
                    <fullName>Reason5</fullName>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Reason6</fullName>
                    <label>Legacy issue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Requested_Date__c</fullName>
        <description>Date/time of write off request.</description>
        <inlineHelpText>Date/time of write off request.</inlineHelpText>
        <label>Write Off Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Requester__c</fullName>
        <description>User who requested write off</description>
        <inlineHelpText>User who requested write off</inlineHelpText>
        <label>Write Off Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Status__c</fullName>
        <label>Write Off Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Validation_Date__c</fullName>
        <label>Write Off Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Validation_Reason__c</fullName>
        <label>Write Off Validation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_Off_Validator__c</fullName>
        <label>Write Off Validator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Write_off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Write off</description>
        <inlineHelpText>Write off</inlineHelpText>
        <label>Write off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__isQualityGatesBreak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality Gates Breaker</label>
        <type>Checkbox</type>
    </fields>
    <label>QCIssue</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>QCIssue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QCIssues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>